# odoo-operator

./: CHANGELOG.md  Cargo.toml  Makefile  index.yaml
.github/workflows/: build.yml  release-please.yml
charts/odoo-operator/: Chart.yaml
charts/odoo-operator/templates/crds/: odoo-crd.yaml  stagingrefreshjob-crd.yaml
charts/odoo-operator/templates/rbac/: role.yaml
docs/proposals/: extra-env.md
scripts/: backup-dump.sh  backup-package-upload.sh  restore-extract.sh  restore-load-db.sh  restore-neutralize.sh
scripts/tests/: test-restore-extract.sh
src/: helpers.rs  postgres.rs  webhook.rs
src/controller/: child_resources.rs  helpers.rs  odoo_instance.rs  state_machine.rs
src/controller/states/: backing_up.rs  cloning_from_source.rs  init_failed.rs  initializing.rs  migrating_filestore.rs  mod.rs  restoring.rs  upgrading.rs
src/crd/: odoo_instance.rs  odoo_staging_refresh_job.rs
tests/: controller_helpers_test.rs  extra_env_injection_test.rs  helpers_test.rs  readonly_sql_access_test.rs  ro_env_injection_test.rs
tests/integration/: child_resources.rs  common.rs  database_missing_policy.rs  finalizer_postgres_cleanup_failure.rs  main.rs  staging_refresh.rs
tests/postgres_harness/: database_exists.rs  main.rs
